--- a/src/assets/Styles/main.scss
+++ b/src/assets/Styles/main.scss
@@ -2,10 +2,10 @@
 @import 'mixin.scss';
 @import '../../components/About/about.scss';
 @import '../../components/Footer/footer.scss';
-@import '../../components/Header/Header.scss';
-@import '../../components/Home/Home.scss';
+@import '../../components/Header/header.scss';
+@import '../../components/Home/home.scss';
 @import '../../components/Services/Services.scss';
-@import '../../components/Products/Products.scss';
+@import '../../components/Products/products.scss';
 @import '../../containers/Contact/contact.scss';
 
 
