--- a/src/containers/Contact/contact.scss
+++ b/src/containers/Contact/contact.scss
@@ -1,8 +1,8 @@
-
 .contact{
     background: linear-gradient(90deg, #f2f4f1 75%, #dce1da 25%);
     width: 100%;
-    height: 768px;
+    height: auto;
+    min-height: 768px;
     display: flex;
     align-items: center;
 
