--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -3,7 +3,8 @@
   position: fixed;
   z-index: 1000;
   width: 100%;
-  height: 96px;
+  min-height: 96px;
+  max-height: auto;
   min-width: 30%;
   padding-left: 1px;
   transition: all 0.5s ease 0s;
