--- a/src/assets/Styles/_mixin.scss
+++ b/src/assets/Styles/_mixin.scss
@@ -1,6 +1,6 @@
 @mixin breakpoint($breakpoint) {
     @if $breakpoint == "mobile" {
-        @media only screen and (max-width: 768px) {
+        @media only screen and (min-width: 768px) and (max-width: 992px) {
         @content;
     }
     } @else if $breakpoint == "tablet" {
